--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -66,10 +66,10 @@
           <span class="bold">Delivery Type: </span> <span class=" oz-contentsRight">{{order.deliverytype}}</span>
         </div>
         <div  class="col-md-4">
-          <span class="bold">Payment By: </span> <span  class="  oz-contentsRight">{{order.buyerpayment.mode}}</span>
+          <span class="bold">Payment By: </span> <span  class="  oz-contentsRight">{{order.payment.mode}}</span>
         </div> 
       
-        <div  class="col-md-4" >  <span class="bold">Payment Status:  </span> <span  class="  oz-contentsRight">{{order.buyerpayment.status}}</span>
+        <div  class="col-md-4" >  <span class="bold">Payment Status:  </span> <span  class="  oz-contentsRight">{{order.payment.status}}</span>
         </div>
  
 
