--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -424,7 +424,13 @@
                                      </a>
                           	</td>
                             <td>
-                            	 <input placeholder="Price &#xf156;" ng-model="config.prod_configprice.value"  id="prodo-product-features_textfield"   type="number"   class="form-control   rs oz-InputConfigs"  name="configPrice"  />  
+                            	 <input placeholder="Price &#xf156;" ng-model="config.prod_configprice.value"  id="prodo-product-features_textfield"   type="number" ng-min="0"  class="form-control   rs oz-InputConfigs prodo-validation"  name="configPrice"  />  
+
+                            	  <div  ng-show="(form.productForm.configPrice.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.configPrice.$invalid==true)" class="prodo-product-Invalid">
+                                 	 <div ng-show="form.productForm.configPrice.$error.ngMin">
+							           Price cannot be negative number
+							         </div>
+								  </div>
 
                             </td>
                           </tr>
