Feature : add and edit holding price symbols for  manage prices

--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -166,9 +166,9 @@
           </td>
           <td ng-hide = 'list.editing'>
               
-              <button ng-show="list.holding_price" class = 'pull-right  btn btn-default' ng-click = 'edit(list)' ><i class="fa fa-pencil"></i>  &nbsp; Holding Price</button>
+              <button ng-show="list.holding_price.fromdate" class = 'pull-right  btn btn-default' ng-click = 'edit(list)' ><i class="fa fa-pencil"></i>  &nbsp; Holding Price</button>
 
-              <button ng-hide="list.holding_price" class = 'pull-right  btn  btn-default' ng-click = 'edit(list)' ><i class="fa fa-plus"></i>  &nbsp; Holding Price</button>
+              <button ng-hide="list.holding_price.fromdate" class = 'pull-right  btn  btn-default' ng-click = 'edit(list)' ><i class="fa fa-plus"></i>  &nbsp; Holding Price</button>
            </td>
          
             <td ng-show = 'list.editing' colspan="2">
