--- a/src/app/assets/css/oz.css
+++ b/src/app/assets/css/oz.css
@@ -637,6 +637,9 @@ background-color: white;}
 .orange1{border-top: 5px solid red;}
 .#prodo-product-features_textfield{width: 160px; height: 30PX;  display:inline-block;}
 .ozWidth30{width: 30%}
+.ozWidth15{width: 15%}
+.ozWidth10{width: 10%}
+.ozWidth20{width: 20%}
 .OZ-evenRow{background-color: rgba(205, 197, 197, 0.31);}
 .badgeColor{background-color: rgba(139, 0, 0, 0.55);}
 .orderbox{box-shadow: 0 1px 2px 1px rgba(248, 245, 245, 0.2), 0 2px 6px rgba(0,0,0,0.15); padding:10px;}
