--- a/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
+++ b/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
@@ -83,8 +83,8 @@
               </div>      
               <hr style = 'margin-bottom : 5px; margin-top : 5px;'>  
 
-              <div class = 'row'>
-                  <div class = 'col-md-6 col xs-6'><h5>Product Name</h5></div>
+              <div class = 'row' ng-if = 'productsList.length !== 0'>
+                  <div class = 'col-md-6 col xs-6' style = 'padding-left: 5px;'><h5>Product Name</h5></div>
                   <div class = 'col-md-6 col xs-6'><h5>Product Price</div>
               </div>
 
@@ -116,18 +116,18 @@
                 
               </div>   
               <hr style = 'margin-bottom : 5px; margin-top : 5px;'>     
-              <div class = 'row'>
-                      <div class = 'col-xs-4 col-md-4'><h5>Product Name</h5></div>
-                      <div class = 'col-xs-4 col-md-4'><h5>Actual Price </h5></div>
+              <div ng-if = 'finalSelectedProducts.length !== 0' class = 'row'>
+                      <div class = 'col-xs-5 col-md-5' style = 'padding-left: 5px;'><h5>Product Name</h5></div>
+                      <div class = 'col-xs-3 col-md-3'><h5>Actual Price </h5></div>
                       <div class = 'col-md-4 col-xs-4'><h5>Discounted Price </h5></div>
               </div>
               <div class = 'row'>
                   <div ng-repeat = 'list in finalSelectedProducts | filter : findProducts'>
                       <div class = 'row' style = 'cursor : w-resize; ' ng-click = 'insertProductToProductList(list,$index)' data-toggle="tooltip" data-placement="right" title="Click on the product to move it to previous list">
-                          <div class = 'col-xs-4 col-ms-4'>
+                          <div class = 'col-xs-5 col-ms-5'>
                               <span  style = 'margin-left : 5px;margin-right : 5px;' ng-bind = 'list.productname'></span>
                           </div>
-                          <div class = 'col-xs-4 col-ms-4'>
+                          <div class = 'col-xs-3 col-ms-3'>
                                   <span ng-bind = 'list.price.value + " " + list.price.currency'></span>
                           </div>
                           <div class = 'col-xs-4 col-ms-4'>
@@ -320,6 +320,7 @@
              <p class="prodo-session-modal-text-theme text-info text-left"> 
                 <strong>
                   <em>Discount code not applied for the following products</em>
+                  <em> The reason for not applying discount code for above products is that the above products is already been applied with other discount code.</em>
                 </strong>  
                     <ol>
                           <li ng-repeat = 'list in successMessage'>
@@ -327,7 +328,7 @@
                           </li>
                     </ol>   
                   <strong class="prodo-session-modal-text-theme text-info text-left">     
-                      <em> The reason for not applying discount code for above products is that the above products is already been applied with other discount code.</em>
+
                       <em> All other products are applied with the selected discount code.</em>
                   </strong>    
               
