discount finished testing needed

--- a/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
+++ b/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
@@ -320,7 +320,7 @@
              <p class="prodo-session-modal-text-theme text-info text-left"> 
                 <strong>
                   <em>Discount code not applied for the following products</em>
-                  <em> The reason for not applying discount code for above products is that the above products is already been applied with other discount code.</em>
+                 
                 </strong>  
                     <ol>
                           <li ng-repeat = 'list in successMessage'>
@@ -328,7 +328,7 @@
                           </li>
                     </ol>   
                   <strong class="prodo-session-modal-text-theme text-info text-left">     
-
+                        <em> The reason for not applying discount code for the above products is that the products are already been applied with other discount code.</em>
                       <em> All other products are applied with the selected discount code.</em>
                   </strong>    
               
