As an Orderzapp administrator should be able to view telephone nos of all orderzapp vendors

--- a/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
@@ -25,9 +25,14 @@
         <div style = "margin-top: 5%;margin-bottom: 0%;" ng-if = 'errors !== ""'> 
           <span ng-bind = "errors" style = "margin-bottom : 10%;"></span> 
         </div>
-        <div ng-if="providers.length != 0" ng-repeat = "list in providers" ng-click="getAllBranches(list)" class="cursorPointerHyperlink" style = "margin : 10px auto;">
-          <img ng-src = "{{list.providerlogo.image}}" style="height:28px;width:28px;">
-          <span ng-bind = "list.providername"></span>
+        <div ng-if="providers.length != 0" ng-repeat = "list in providers" ng-click="getAllBranches(list)" class="cursorPointerHyperlink row" style = "margin : 10px auto;">
+          <div class="col-md-3">
+            <img ng-src = "{{list.providerlogo.image}}" style="height:28px;width:28px;">
+          </div>
+          <div style="font-weight: bold; letter-spacing: 1px; font-size:12px;" class="col-md-9">
+            <span ng-bind = "list.providername"></span>
+            <span style="color: rgb(79, 79, 228);" ng-bind = "list.user.mobileno"></span>
+          </div>
        </div>
       </div>
       <br>
@@ -41,7 +46,7 @@
       <div style="margin:5px auto;" class="user-counter">
         <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold; " class="text-muted">User</p>
         <div oz-clock class="zoomCssControlClock clock " style="width:287%;left:-100%;top:-30px;" current-value = 'customers' ></div>
-      </div2
+      </div>
       <div style="margin:5px auto;" class="user-counter">
         <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold;" class="text-muted">Order</p>
         <div oz-clock class="zoomCssControlClock clock" current-value = 'orders' style="width:287%;left:-100%;top:-30px;" ></div>
