Feature : Manage price - Added Confirmation modal before changing product price

--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -3,6 +3,32 @@
      
 
 
+ <!-- Modal -->
+    <div class="modal" id="priceConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title" id="myModalLabel">Confirmation</h4>
+            </div>
+             <div class="modal-body">
+              Changing product price will delete that product's current holding price <br>
+              Are you sure you want to change product price?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default " data-dismiss="modal" ng-click="disableEditorPrice()"> <i class="glyphicon glyphicon-remove"></i>  &nbsp; Cancel</button>
+              <button type="button" class="btn btn-primary  " id="ChangeProductPriceOkButton" data-dismiss="modal" > <i class="fa fa-floppy-o"></i>  &nbsp; OK </button>
+
+            </div>
+            
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
+
+
 <div  ng-show="selectedBranchId  " >
 <div ng-show="productPricelist.length>0" id="tabs">
     <ul id="tabPrice" class=" policyTab nav nav-pills" ng-init="tabForPrice.np = true;
